--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-start;
     border: 1px solid #ccc;
-    box-shadow: 0 2px 5px #888888;
+    box-shadow: 0 1px 5px #888888;
 }
 
 .navigationList {
@@ -26,5 +26,5 @@
 }
 
 .navigationItemActive {
-    color: red;
+    color: rgb(184, 31, 102);
 }
